<resources>
    <string name="app_name">우산 알림이</string>
    <string name="alarm_setting">알림 설정</string>
    <string name="home">외출</string>
    <string name="home_description">집에서부터 다음과 같은 거리 이상\n멀어지면 외출 상태로 전환합니다.</string>
    <string name="m">0m</string>
    <string name="distance">거리</string>
    <string name="distance_description">우산에서부터 다음과 같은 거리 이상\n멀어지면 알림이 울립니다.</string>
    <string name="save_location">현재 위치를 집으로 설정</string>

    <string name="distance_dialog_description">거리를 입력해주세요. (단위 : m)</string>
    <string name="save">저장</string>

    <string name="success_to_save">위치를 저장했습니다.</string>
    <string name="permisson_denied">필수 권한이 부족합니다.</string>
    <string name="bluetooth_not_available">블루투스를 사용할 수 없습니다.</string>
    <string name="device_not_found">연결할 디바이스가 존재하지 않습니다.</string>
    <string name="device_connected">연결되었습니다.</string>
    <string name="connection_failed">연결에 실패했습니다.</string>
    <string name="saved">저장되었습니다.</string>
    <string name="save_failed">거리는 1m 이상이어야 합니다.</string>

    <string name="alarm_message">"우산을 두고 간 것으로 예상됩니다! 우산을 꼭 챙겨가세요!"</string>
</resources>