<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="25dp"

                android:layout_marginLeft="18dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:fontFamily="@font/nnsnheavy"/>

            <ImageView
                android:id="@+id/image_bluetooth"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:background="@drawable/background_icon"
                android:src="@drawable/icon_bluetooth" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:text="@string/alarm_setting"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/nnsnextrabold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:paddingVertical="9dp"
            android:paddingHorizontal="18dp"
            android:background="@drawable/background_alarm_setting"
            android:clickable="true">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/image_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/icon_background"
                android:src="@drawable/icon_home" />

            <TextView
                android:id="@+id/text_home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_home_description"
                app:layout_constraintLeft_toRightOf="@id/image_home"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="12dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:fontFamily="@font/nnsnbold"/>

            <TextView
                android:id="@+id/text_home_description"
                app:layout_constraintTop_toBottomOf="@id/text_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_home"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="12dp"
                android:text="@string/home_description"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:fontFamily="@font/nnsnlight"/>

            <TextView
                android:id="@+id/text_home_distance"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:text="@string/m"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:fontFamily="@font/nnsnbold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            android:paddingHorizontal="18dp"
            android:background="@drawable/background_alarm_setting"
            android:clickable="true">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/image_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/icon_background"
                android:src="@drawable/icon_ruler" />

            <TextView
                android:id="@+id/text_distance"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_distance_description"
                app:layout_constraintLeft_toRightOf="@id/image_distance"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="12dp"
                android:text="@string/distance"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:fontFamily="@font/nnsnbold"/>

            <TextView
                android:id="@+id/text_distance_description"
                app:layout_constraintTop_toBottomOf="@id/text_distance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_distance"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="12dp"
                android:text="@string/distance_description"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:fontFamily="@font/nnsnlight"/>

            <TextView
                android:id="@+id/text_distance_distance"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:text="@string/m"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:fontFamily="@font/nnsnbold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_save_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="18dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="18dp"
        android:background="@drawable/background_save_location"
        android:clickable="true"
        android:text="@string/save_location"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="18dp"
        android:fontFamily="@font/nnsnextrabold"/>

</androidx.constraintlayout.widget.ConstraintLayout>